--- a/Auth/main/templates/sam/login.html
+++ b/Auth/main/templates/sam/login.html
@@ -316,7 +316,7 @@ form {
                 <div class="login-container">
                     <!-- Back Button -->
                     <div class="back-button">
-                        <a href="#"><i class="fas fa-arrow-left"></i></a>
+                        <a href="{% url 'index' %}"><i class="fas fa-arrow-left"></i></a>
                     </div>
                     
                     <!-- Header -->
